tests/accept/nine.ul
char foobar(char[5] c, int x)
{
	return c[x];
}

void main()
{
	char c;
	char[5] c_;
	int x;

	x = 0;
	c_[x] = 'a';
	
	println foobar(c_, x);
}
