tests/reject/notsixteen.ul
string notmain(int[2*2] x, char c)
{
	return "Howdy";
}
